syntax = "proto3";

option csharp_namespace = "ServiceMessage";
package ServiceMessage;

service MessageService {
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
    rpc GetMessage(GetMessageRequest) returns (GetMessageResponse);
    rpc FindMessage(FindMessageRequest) returns (FindMessageResponse);
    rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);
    rpc UpdateMessage(UpdateMessageRequest) returns (UpdateMessageResponse);
}

message Message {
    string id = 1;
    string text = 2;
    string author = 3;
    bytes photo = 4;
    repeated string chatIds = 5;
}

message SendMessageRequest {
    Message message = 1;
}

message SendMessageResponse {
    bool isSent = 1;
}

message GetMessageRequest {
    string id = 1;
}

message GetMessageResponse {
    Message message = 1;
}

message FindMessageRequest {
    string text = 1;
}

message FindMessageResponse {
    repeated Message messages = 1;
}

message DeleteMessageRequest {
    string id = 1;
}

message DeleteMessageResponse {
    bool isSuccess = 1;
}

message UpdateMessageRequest {
    string id = 1;
    string text = 2;
}

message UpdateMessageResponse {
    bool isSuccess = 1;
}
